# Audio-File-Tagging-Tool

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.tsx  tauri.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: Waveform.tsx
src/lib/: format.ts  tags.ts
src/types/: events.d.ts
src/ui/: Status.tsx
