[package]
name = "audio-tagger"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "path-all", "fs-all", "dialog-open", "dialog"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lofty = "0.18.2"
base64 = "0.21"
once_cell = "1"
chrono = { version = "0.4", features = ["clock"] }
parking_lot = "0.12"
